# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: gendiff.py  parsers.py
gendiff/formatters/: __init__.py  default.py  json.py  json_like_rendering.py  json_rendering.py  plain.py  plain_text_rendering.py
gendiff/scripts/: gendiff.py  gendiff_run.py  tests_run.py
gendiff/tests/: test_cases.py
gendiff/tests/fixtures/: expected_json_format.json
tests/: cases.py  test_cases.py  test_formatters.py  test_parsers.py
tests/fixtures/: expected_result.json  first_file.json
